test/files/neg/t1878.check
t1878.scala:3: error: _* may only come last
  val err1 = "" match { case Seq(f @ _*, ',') => f }
                                 ^
t1878.scala:3: error: scrutinee is incompatible with pattern type;
 found   : Seq[A]
 required: String
  val err1 = "" match { case Seq(f @ _*, ',') => f }
                                ^
t1878.scala:9: error: _* may only come last
  val List(List(_*, arg2), _) = List(List(1,2,3), List(4,5,6))
                 ^
t1878.scala:13: error: _* may only come last
    case <p> { _* } </p> =>
                ^
four errors found
